analytics/timeline2/time.css
@import url("https://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");

.highcharts-figure {
    margin: 0;
}

#play-controls {
    max-width: 1000px;
    margin: 1em auto;
}

#container {
    height: 900px;
    max-width: 1000px;
    margin: 0 auto;
}

#play-pause-button {
    margin-left: 10px;
    width: 50px;
    height: 50px;
    cursor: pointer;
    border: 1px solid rgba(2, 117, 255, 1);
    border-radius: 25px;
    color: white;
    background-color: rgba(2, 117, 255, 1);
    transition: background-color 250ms;
}

#play-pause-button:hover {
    background-color: rgba(2, 117, 255, 0.5);
}

#play-range {
    transform: translateY(2.5px);
    width: calc(100% - 90px);
    background: #f8f8f8;
}

.highcharts-description {
    margin: 0.3rem 10px;
}

